fix padding on mobile

--- a/wp-content/themes/crossfit-cambridge/src/scss/all.scss
+++ b/wp-content/themes/crossfit-cambridge/src/scss/all.scss
@@ -38,6 +38,7 @@
       position: relative;
       background-color: black;
       font-size: 4vw;
+      padding: $spacer/2;
     }
   }
 }
